<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/btnReviewProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_btn" />

    <Button
        android:id="@+id/btnReviewLike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/like_btn" />

    <Button
        android:id="@+id/btnReviewDislike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/dislike_btn" />

    <Button
        android:id="@+id/btnReviewComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/comments" />

    <Button
        android:id="@+id/btnReviewReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/report" />

</LinearLayout>
